--- a/src/Pages/Home/Services/Services.css
+++ b/src/Pages/Home/Services/Services.css
@@ -7,3 +7,15 @@
     text-align: center;
     color: blueviolet;
 }
+
+/* make services responsive */
+@media only screen and (max-width:576px){
+    .service-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+@media only screen and (min-width:577px) and (max-width:992px){
+    .service-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
